# argyle-task

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite  pyproject.toml  python_stack.md
argyle_task/: database.py  main.py  user.py
src/: db.sqlite
src/argyle_task/: database.py  main.py  user.py
tests/: test_env.py  test_task.py
