[tool.poetry]
name = "argyle-task"
version = "0.1.0"
description = ""
authors = ["fatmakhv <fatmaba@gmail.com>"]
readme = "README.md"
packages = [{include = "argyle_task"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.2"
celery = "^5.2.7"
httpx = "^0.23.3"
requests = "^2.28.2"
playwright = "^1.31.1"
cloudscraper = "^1.2.69"
fastapi = "^0.94.1"
httpx-auth = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
